# mirage

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/scripts/: install-vcpkg-windows.ps1
.github/workflows/: build.yml  release.yml
docs/: user-guide.md
packaging/: install.ps1  install.sh
scripts/: install.sh
src/: main.cpp
src/audio/: audio.hpp  audio_decoder.cpp  audio_player.cpp
src/core/: cli_options.cpp  cli_options.hpp  config.cpp  core.hpp  doctor_checks.cpp  doctor_checks.hpp  error.cpp  log.hpp  port_probe.cpp  port_probe.hpp  receiver_adapter.cpp  receiver_adapter.hpp  receiver_client.hpp  receiver_identity.cpp  receiver_identity.hpp  receiver_session.hpp  receiver_source.cpp  receiver_source.hpp  runtime_assets.cpp  runtime_assets.hpp  runtime_paths.cpp  runtime_paths.hpp  runtime_process.cpp  runtime_process.hpp  runtime_status.cpp  runtime_status.hpp  sanitizer_suppressions.cpp  status_report.cpp  status_report.hpp
src/crypto/: aes_ctr.cpp  crypto.hpp  ed25519_keypair.cpp  fairplay_pairing.cpp  fairplay_sap.cpp  hash.cpp  srp6a.cpp  tlv8_chacha.cpp
src/discovery/: discovery.hpp  interface_enum.cpp  mdns_broadcaster.cpp  service_records.cpp
src/io/: address.hpp  epoll_loop.cpp  event_loop.hpp  io.hpp  iocp_loop.cpp  platform.hpp  task.hpp  tcp.cpp  tcp.hpp  timer.hpp  udp.cpp  udp.hpp
src/media/: ffmpeg_decoder.cpp  local_media_sink.cpp  media.hpp  nvdec_decoder.cpp  pipeline.hpp  url_media_player.cpp  url_media_player.hpp  vaapi_decoder.cpp
src/platform/: audio_alsa.cpp  audio_alsa.hpp  audio_out.cpp  audio_out.hpp  audio_pulse.cpp  audio_pulse.hpp  audio_wasapi.cpp  audio_wasapi.hpp  dl.hpp  window.cpp  window.hpp  window_wayland.cpp  window_wayland.hpp  window_win32.cpp  window_win32.hpp  window_x11.cpp  window_x11.hpp
src/protocols/: airplay_protocol.hpp  cast_channel.cpp  protocols.hpp  receiver_sessions.cpp  receiver_sessions.hpp  receiver_sources.cpp  receiver_sources.hpp  rtsp_message.cpp  rtsp_message.hpp  rtsp_server.cpp  wfd_session.cpp
src/protocols/airplay/: media_metadata.cpp  media_metadata.hpp  media_source.cpp  media_source.hpp  receiver_session.cpp  rtsp_state.cpp  rtsp_state.hpp  source.cpp
src/protocols/cast/: framing.cpp  framing.hpp  message.cpp  message.hpp  probe.cpp  probe.hpp  receiver_session.cpp  source.cpp  tls.cpp  tls.hpp
src/protocols/wfd/: control.cpp  control.hpp  receiver_session.cpp  source.cpp
src/render/: render.hpp  vulkan_renderer.cpp
src/render/shaders/: nv12_to_rgb.frag  nv12_to_rgb.vert
tests/: install_smoke.cmake  package_smoke.cmake  smoke_cast_probe.sh  smoke_raop.sh  smoke_wfd_probe.sh  test_airplay_media_metadata.cpp  test_airplay_media_source.cpp  test_airplay_protocol.cpp  test_airplay_rtsp_state.cpp  test_cast_framing.cpp  test_cast_message.cpp  test_cast_probe.cpp  test_cli_options.cpp  test_config.cpp  test_doctor_checks.cpp  test_fairplay_sap.cpp  test_media_pipeline.cpp  test_port_probe.cpp  test_receiver_adapter.cpp  test_receiver_identity.cpp  test_receiver_session.cpp  test_receiver_sources.cpp  test_rtsp_message.cpp  test_runtime_assets.cpp  test_runtime_paths.cpp  test_runtime_process.cpp  test_runtime_status.cpp  test_srp6a.cpp  test_status_report.cpp  test_wfd_control.cpp
